--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "update-electron-app": "^3.0.0"
   },
   "devDependencies": {
-    "electron": "^33.2.1",
     "@electron-forge/cli": "^7.6.0",
     "@electron-forge/maker-zip": "^7.6.0",
-    "@electron-forge/publisher-github": "^7.6.0"
+    "@electron-forge/publisher-github": "^7.6.0",
+    "dotenv-cli": "^11.0.0",
+    "electron": "^33.2.1"
   }
 }
